--- a/HotelManagementSystem/wwwroot/css/styles.css
+++ b/HotelManagementSystem/wwwroot/css/styles.css
@@ -1,4 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
+<head>
+    <link rel="stylesheet" href="~/css/styles.css" /> 
+    
+</head>
 
 @font-face {
   font-family: 'Glyce';
