--- a/HotelManagementSystem/Views/Account/Login.cshtml
+++ b/HotelManagementSystem/Views/Account/Login.cshtml
@@ -8,7 +8,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login | Staywise</title>
-    <link rel="stylesheet" href="~/styles.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
     <style>
         body {
             margin: 0;
@@ -21,7 +21,7 @@
         /* left image */
         .image-side {
             flex: 1;
-            background: url("~/images/rew.png") center/cover no-repeat;
+            background: url("/images/rew.png") center/cover no-repeat;
         }
 
         /* right form */
