--- a/HotelManagementSystem/Views/Account/Register.cshtml
+++ b/HotelManagementSystem/Views/Account/Register.cshtml
@@ -8,7 +8,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Register | Staywise</title>
-  <link rel="stylesheet" href="~/styles.css" />
+  <link rel="stylesheet" href="/css/styles.css" />
   <style>
     * {
       box-sizing: border-box;
@@ -36,7 +36,7 @@
     /* image side (right) */
     .image-side {
       flex: 1;
-      background: url("~/images/reg.png") center/cover no-repeat;
+      background: url("/images/reg.png") center/cover no-repeat;
     }
 
     /* register box */
