--- a/HotelManagementSystem/Views/Account/Login.cshtml
+++ b/HotelManagementSystem/Views/Account/Login.cshtml
@@ -132,7 +132,9 @@
 
             <p class="alt-text">
                 Don’t have an account?
-                <a asp-controller="Account" asp-action="Register">Register</a>
+                <span class="alt-link-container">
+                    <a asp-controller="Account" asp-action="Register">Register</a>
+                </span>
             </p>
         </div>
     </div>
