--- a/HotelManagementSystem/Views/Bookings/Create.cshtml
+++ b/HotelManagementSystem/Views/Bookings/Create.cshtml
@@ -232,7 +232,7 @@
             <li><a asp-page="/Contact">Contact</a></li>
         </ul>
         <button class="login-btn">
-            <a asp-page="/Login" style="text-decoration: none; color: #fff;">Login</a>
+            <a asp-controller="Account" asp-action="Login" style="text-decoration: none; color: #fff;">Login</a>
         </button>
     </nav>
 
