few more changes

--- a/HotelManagementSystem/Pages/Index.cshtml
+++ b/HotelManagementSystem/Pages/Index.cshtml
@@ -21,7 +21,7 @@
             <li><a asp-page="/Index">Home</a></li>
             <li><a asp-controller="Rooms" asp-action="Index">Rooms</a></li>
             <li><a asp-controller="Bookings" asp-action="Create">Booking</a></li>
-            <li><a asp-page="/Contact">Contact</a></li>
+            <li><a asp-controller="Contact" asp-action="Index">Contact</a></li>
         </ul>
         <button class="login-btn">
             <a asp-controller="Account" asp-action="Login">Login</a>
