--- a/HotelManagementSystem/Views/Account/Login.cshtml
+++ b/HotelManagementSystem/Views/Account/Login.cshtml
@@ -119,6 +119,7 @@
             }
 
             <form asp-controller="Account" asp-action="Login" method="post">
+                @Html.AntiForgeryToken()
                 <div class="form-group">
                     <label for="email">Email Address</label>
                     <input type="email" id="email" name="Email" placeholder="Enter your email" required />
