--- a/HotelManagementSystem/Views/Account/Register.cshtml
+++ b/HotelManagementSystem/Views/Account/Register.cshtml
@@ -138,7 +138,7 @@
       <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
       <form asp-controller="Account" asp-action="Register" method="post">
-        
+        @Html.AntiForgeryToken()
         <div class="form-group">
           <label for="fullname">Full Name</label>
           <input type="text" id="fullname" name="Name" placeholder="Enter your name" required />
