--- a/HotelManagementSystem/Views/Bookings/Create.cshtml
+++ b/HotelManagementSystem/Views/Bookings/Create.cshtml
@@ -247,9 +247,9 @@
 
                 <div class="form-row">
                     <div>
-                        <label asp-for="CustomerId">Customer ID</label>
-                        <input type="text" asp-for="CustomerId" class="form-control" placeholder="Enter Customer ID" required />
-                        <span asp-validation-for="CustomerId" class="text-danger"></span>
+                        <label asp-for="CustomerName">Customer Name</label>
+                        <input type="text" asp-for="CustomerName" class="form-control" placeholder="Enter Customer Name" required />
+                        <span asp-validation-for="CustomerName" class="text-danger"></span>
                     </div>
                     
                     <div>
