--- a/HotelManagementSystem/Views/Bookings/Create.cshtml
+++ b/HotelManagementSystem/Views/Bookings/Create.cshtml
@@ -1,6 +1,5 @@
 @using HotelManagementSystem.Models
-@model Booking
-
+@model BookingCreateViewModel  
 @{
     // This view uses a full HTML page layout, so we set Layout to null.
     Layout = null; 
